# ragas-evaluation

./: .gitignore  2.28.0  ARCHITECTURE.md  ASQA_IMPLEMENTATION_GUIDE.md  EXECUTION_GUIDE.md  FINAL_CHECKLIST.md  FINAL_DELIVERY.md  HuongDanCaiDat.txt  HuongDanSuDung.txt  IMPLEMENTATION_SUMMARY.md  RAGAS_FILTER_GUIDE.md  RAGAS_FILTER_SUMMARY.md  README.md  START_HERE.md  USAGE_GUIDE.md  cursorRuleUsage.md  hybrid_rrgf_pipeline_28a466ca.plan.md  main.py  msmacro_llm_judge_predictions.csv  pyproject.toml  requirements.txt  token.txt  train.py
data/: labeled_merged_test.csv
docs/: DATA_AND_SPLITS.md  DEBERTA_NLI_BASELINE.md  EVALUATION.md  RAGAS_FILTER_PIPELINE.md
notebooks/: 02_filter_training.ipynb  03_rag_asqa_baseline.ipynb  04_synthetic_data_generation.ipynb  05_evaluation_analysis.ipynb  06_self_rag_verifier.ipynb  06_self_rag_verifier_kaggle.ipynb  07_self_rag_inference.ipynb  07_self_rag_inference_kaggle.ipynb  08_normal_rag_inference_kaggle.ipynb  09_ragas_filter_pipeline_demo.ipynb  0_data_collection.ipynb  1_asqa_data_preparation.ipynb  1_synthetic-asqa.ipynb  1_synthetic-data.ipynb  3.1_ragas-feature-extraction.ipynb  3.2_filter-ragas-merge.ipynb  3.2_filter-training.ipynb  3.2a_ragas-feature-extraction.ipynb  3.2b_filter-training.ipynb  4_llm-judge-filter.ipynb  5_deberta_nli_baseline.ipynb  asqa_data_preparation.ipynb  data_collection.ipynb  evaluation_analysis.ipynb  filter-ragas-merge.ipynb  filter-with-ragas.ipynb  filter_training.ipynb  filter_training_kaggle.ipynb  llm-judge-filter.ipynb  rag-asqa-baseline.ipynb  rag-hotpotqa.ipynb  rag-train.ipynb  (+7 more)
(+234 files in other folders)
